// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bczSft sc-gsnScm jurrAP jyNNeI"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bczSft sc-gsnScm ldAfTY jyNNeI"
>
  foo
</button>
`;
